tests/baselines/reference/tsxReactEmitWhitespace2.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== file.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    		[s: string]: any;
    	}
    }
    declare var React: any;
    
    // Emit ' word' in the last string
    <div>word <code>code</code> word</div>;
    // Same here
    <div><code>code</code> word</div>;
    // And here
    <div><code /> word</div>;
    
    